--- a/about.css
+++ b/about.css
@@ -10,7 +10,7 @@ body{
 	width: 100%; */
 	grid-template-rows: 220px 1fr 110px;
 	background: radial-gradient(transparent 70%, rgba(0, 0, 0, 0.5)),
-	url(images/bg/dark_wood_low.jpg);
+	url(dark_wood_low.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -27,7 +27,7 @@ body{
 }
 			.head__logo{
 				grid-row: 1;
-				background: url(images/logo_w_mini.png) no-repeat;
+				background: url(logo_w_mini.png) no-repeat;
 				background-position: center;
 				background-size: 275px 140px;
 				/* background-color: rgba(0, 0, 0, 0.452); */
@@ -97,7 +97,7 @@ body{
 							text-align: center;
 						}
 			.content__image_1{
-				background-image: url(images/about/author2.jpg);
+				background-image: url(author2.jpg);
 				background-size: cover;
 				grid-column: 1/2;
 				grid-row: 1/2;
@@ -113,7 +113,7 @@ body{
 							.content__image_1::after{
 								content: "";
 								display: block;
-								background-image: url(images/about/bob2.jpg);
+								background-image: url(bob2.jpg);
 								background-size: cover;				
 								width: 400px; height: 600px;
 								transform: rotate(-20deg);
