--- a/goods.css
+++ b/goods.css
@@ -10,7 +10,7 @@ body{
 	width: 100%; */
 	grid-template-rows: 220px 1fr 110px;
 	background: radial-gradient(transparent 70%, rgba(0, 0, 0, 0.5)),
-	url(images/bg/dark_wood_low.jpg);
+	url(dark_wood_low.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -27,7 +27,7 @@ body{
 }
 			.head__logo{
 				grid-row: 1;
-				background: url(images/logo_w_mini.png) no-repeat;
+				background: url(logo_w_mini.png) no-repeat;
 				background-position: center;
 				background-size: 275px 140px;
 				/* background-color: rgba(0, 0, 0, 0.452); */
@@ -86,42 +86,42 @@ body{
 			
 			.item_1{
 				grid-column: 2/3;
-				background: url(images/goods/belt1.jpg) no-repeat;
+				background: url(belt1.jpg) no-repeat;
 				background-size: 400px 500px;
 			}
 					.item_1:hover{
 						grid-column: 2/3;
-						background: url(images/goods/belt2.jpg) no-repeat;
+						background: url(belt2.jpg) no-repeat;
 						background-size: 400px 500px;
 					}
 			.item_2{
 				grid-column: 3/4;
-				background: url(images/goods/bag1.jpg) no-repeat;
+				background: url(bag1.jpg) no-repeat;
 				background-size: 400px 500px;
 			}
 					.item_2:hover{
 						grid-column: 3/4;
-						background: url(images/goods/bag2.jpg) no-repeat;
+						background: url(bag2.jpg) no-repeat;
 						background-size: 400px 500px;
 					}
 			.item_3{
 				grid-column: 4/5;
-				background: url(images/goods/wallet_1.jpg) no-repeat;
+				background: url(wallet_1.jpg) no-repeat;
 				background-size: 400px 500px;
 			}
 					.item_3:hover{
 						grid-column: 4/5;
-						background: url(images/goods/wallet_2.jpg) no-repeat;
+						background: url(wallet_2.jpg) no-repeat;
 						background-size: 400px 500px;
 					}
 			.item_4{
 				grid-column: 5/6;
-				background: url(images/goods/wallet_long1.JPG) no-repeat;
+				background: url(wallet_long1.JPG) no-repeat;
 				background-size: 100%;
 			}
 					.item_4:hover{
 						grid-column: 5/6;
-						background: url(images/goods/wallet_long2.jpg) no-repeat;
+						background: url(wallet_long2.jpg) no-repeat;
 						background-size: 100%;
 					}
 							.item_1_1{
