--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@ body{
 	height: 100vh-1px;
 	grid-template-rows: 220px 1fr 110px;
 	background: radial-gradient(transparent 70%, rgba(0, 0, 0, 0.5)),
-	url(images/wallet4.png),
-	url(images/bg/dark_wood_low.jpg);
+	url(wallet4.png),
+	url(dark_wood_low.jpg);
 	background-position: center, right 1% bottom 100% ;
 	background-repeat: no-repeat, no-repeat;
 	background-size: cover, 45%;
@@ -27,7 +27,7 @@ body{
 }
 			.head__logo{
 				grid-row: 1;
-				background: url(images/logo_w_mini.png) no-repeat;
+				background: url(logo_w_mini.png) no-repeat;
 				background-position: center;
 				background-size: 275px 140px;
 				/* background-color: rgba(0, 0, 0, 0.452); */
